force-app/main/default/objects/Registration_Attachment_Bank__c/Registration_Attachment_Bank__c.object-meta.xml
<CustomObject>
    <description>Referenced by code to auto-create the necessary Attachments Plus records throughout a Registration form based on the Registration&#39;s record type and rule data in this object.</description>
    <label>Registration Attachment Bank</label>
    <nameField>
        <displayFormat>RA-BANK-{0000000}</displayFormat>
        <label>Registration Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Attachment Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>