force-app/main/default/objects/Registration_Attachment_Bank__c/fields/Child_Object_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Criteria__c</fullName>
    <inlineHelpText>Enter the criteria that would be used in a WHERE clause to specify which child object records this attachment should be created for. e.g. Status = TRUE or Type = &#39;my type&#39;
Fields must be on the child record itself.</inlineHelpText>
    <label>Child Object Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>