force-app/main/default/objects/Registration_Attachment_Bank__c/fields/On_Create__c.field-meta.xml
<CustomField>
    <fullName>On_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to create this document on the creation of a registration application</inlineHelpText>
    <label>On Create</label>
    <type>Checkbox</type>
</CustomField>