force-app/main/default/objects/Registration_Attachment_Bank__c/fields/Registration_Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Registration_Child_Object__c</fullName>
    <inlineHelpText>enter the API name of the child object of the registration that results in the creation of this attachment request</inlineHelpText>
    <label>Registration Child Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>