force-app/main/default/objects/Registration_Attachment_Bank__c/fields/Registration_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Registration_Document_Category__c</fullName>
    <description>Mapped to Registration_Document_Category__c Attachment Plus field.</description>
    <inlineHelpText>Enter the section name from the form wizard that this document should appear on.</inlineHelpText>
    <label>Registration Document Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>