force-app/main/default/objects/Registration_Attachment_Bank__c/fields/Registration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Document_Type__c</fullName>
    <description>Mapped to Type__c Attachment Plus field.</description>
    <label>Registration Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workers Compensation Insurance (WCI)</fullName>
            </value>
            <value>
                <fullName>Collective Bargaining Agreement (CBA)</fullName>
            </value>
            <value>
                <fullName>Sample Leasing Contract</fullName>
            </value>
            <value>
                <fullName>Signed Employee Leasing Contract</fullName>
            </value>
            <value>
                <fullName>Employee Leasing WCI</fullName>
            </value>
            <value>
                <fullName>Industrial Waste Discharge Permit Certificate</fullName>
            </value>
            <value>
                <fullName>IRS Clearance Letter</fullName>
            </value>
            <value>
                <fullName>Federal Employer Identification Number (FEIN)</fullName>
            </value>
            <value>
                <fullName>State Employer Identification Number (SEIN)</fullName>
            </value>
            <value>
                <fullName>Certificate of Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation/Organization</fullName>
            </value>
            <value>
                <fullName>Bond Certification</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Fictitious Business Name Statement for DBA</fullName>
            </value>
            <value>
                <fullName>Other Required Document</fullName>
            </value>
            <value>
                <fullName>Statement of Information</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Documents</fullName>
            </value>
            <value>
                <fullName>Affidavit of Character</fullName>
            </value>
            <value>
                <fullName>Personal Record</fullName>
            </value>
            <value>
                <fullName>Fee Schedule</fullName>
            </value>
            <value>
                <fullName>Exclusive Contract</fullName>
            </value>
            <value>
                <fullName>Non-Exclusive Contract</fullName>
            </value>
            <value>
                <fullName>Premise Certification</fullName>
            </value>
            <value>
                <fullName>Driver License or Photo ID</fullName>
            </value>
            <value>
                <fullName>Premise Certification - Main Location</fullName>
            </value>
            <value>
                <fullName>Business Tax Registration Certificate aka Zoning permit</fullName>
            </value>
            <value>
                <fullName>Fictitious Business Name Statement for location</fullName>
                <isActive>false</isActive>
                <label>Fictitious Business Name Statement for location</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>