force-app/main/default/objects/Registration_Attachment_Bank__c/fields/VIP_Form_Section_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>VIP_Form_Section_Name_Display__c</fullName>
    <description>Used to show the name display for the VF page to reference.</description>
    <formula>VIP_Form_Section__r.VIPForm__Name_Displayed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Form Section Name Display</label>
    <type>Text</type>
</CustomField>