force-app/main/default/objects/Registration_Attachment_Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attachment_Name__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Active__c</columns>
    <columns>VIP_Form_Section__c</columns>
    <columns>Registration_Document_Category__c</columns>
    <columns>Registration_Document_Type__c</columns>
    <columns>On_Create__c</columns>
    <columns>Attachment_Required__c</columns>
    <columns>Trigger_Field__c</columns>
    <columns>Trigger_Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>